# solid-state-physics

./: README.md  pyproject.toml
src/solid-state-phyiscs/: basics.mlx  current.mat  matlab_basics.ipynb
