[tool.poetry]
name = "solid-state-physics"
version = "0.1.0"
description = ""
authors = ["ocinei <134710670+ocinei@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "solid_state_physics"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
